added short url to the presentation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 					<p>
 						<small><a href="#">Shaunak Vairagare</a></small>
 					</p>
+					<p>
+						<br><br>
+						<h3><a href="http://bit.do/devsummit-2014">bit.do/devsummit-2014</a></h3>
+					</p>
 				</section>
 			</div>
 
