added two more slides

--- a/index.html
+++ b/index.html
@@ -53,15 +53,31 @@
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
+					<h2>Overview</h2>
 					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
+						<ul>
+							<li>10.3 release in Q3</li><br>	
+							<li>ArcGIS JavaScript API for Web applications and ArcGIS Runtime for native applications</li><br>	
+							<li>Flex and Silverlight will not get future updates</li><br>	
+							<li>Chris Wanstrath keynote</li><br>	
+							<li>Lots of 3D discussion and coding best practices</li><br>	
+						</ul>
+					</p>	
+					
 
 					<aside class="notes">
 						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
 					</aside>
+				</section>
+
+				<section>
+					<h2>New Technologies</h2>
+						<ul>
+							<li>ArcGIS Pro</li>
+							<li>Web App Builder</li>
+							<li>GeoTrigger</li>
+							<li><a href="https://betacommunity.esri.com/callout/?callid=6811D4EE591E41FA91FE743D294B114B">Beta Community</a></li>
+						</ul>
 				</section>
 			</div>
 
