--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
 			</div>
 
 		</div>
-
+		<script src="https://cdn.firebase.com/v0/firebase.js"></script>
 		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
+		<script src="js/reveal.js"></script>
+		<script src="js/watch.js"></script>
+		<script src="js/remote.js"></script>
 
 		<script>
 
@@ -95,6 +97,7 @@
 				progress: true,
 				history: true,
 				center: true,
+				slideNumber: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
