--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<meta charset="utf-8">
 
 		<title>ESRI Devsummit 2014</title>
-
+		
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+		<meta http-equiv="Pragma" content="no-cache"/>
+		<meta http-equiv="Expires" content="0"/>
+		
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
 
